--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node ./database.js && node ./server.js"
+    "run": "node ./index.js"
   },
   "keywords": [],
   "author": "",
